--- a/index.html
+++ b/index.html
@@ -10,38 +10,319 @@
 
 <body>
   <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo">
-        <img src="img/logo.svg" alt="DSGN" width="" height="">
+    <div class="studio-label">
+      <a class="studio-label-logo">
+        <img src="img/logo.svg" width="" height="" alt="DSGN">
       </a>
-      <ul class="site-navigation">
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-      </ul>
-    </nav>
+      <p class="studio-label-description">Associates studio design</p>
+      <div class="socials">
+        <b class="socials-caption visually-hidden">Follow us:</b>
+        <ul class="socials-list">
+          <li><a class="socials-link" href="#">Facebook</a></li>
+          <li><a class="socials-link" href="#">Twitter</a></li>
+          <li><a class="socials-link" href="#">Instagram</a></li>
+          <li><a class="socials-link" href="#">Google+</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="main-header-right">
+      <nav class="main-navigation">
+        <ul class="main-navigation-list">
+          <li class="main-navigation-item"><a href="#projects">Projects</a></li>
+          <li class="main-navigation-item"><a href="#studio">Our studio</a></li>
+          <li class="main-navigation-item"><a href="#news">News</a></li>
+          <li class="main-navigation-item"><a href="#contacts">Contacts</a></li>
+        </ul>
+      </nav>
+      <p class="main-header-adress">
+        90802 California<br>
+        Long beach<br>
+        PO Box 68789<br>
+        300 East Ocean<br>
+        Boulevard
+      </p>
+      <p class="main-header-contacts">
+        +64 9 345 6758<br>
+        info@dsgn-studio.com
+      </p>
+    </div>
   </header>
 
   <main class="container">
-    <section class="project"></section>
-    <section class="staff"></section>
-    <section class="news"></section>
+    <section class="projects" id="projects">
+      <div class="projects-layout-left">
+        <header class="projects-header">
+          <h2 class="projects-title">Projects</h2>
+          <div class="projects-navigation">
+            <ul class="projects-navigation-list">
+              <li><a class="projects-navigation-link current" href="#">All</a></li>
+              <li><a class="projects-navigation-link" href="#">House</a></li>
+              <li><a class="projects-navigation-link" href="#">Commercial</a></li>
+              <li><a class="projects-navigation-link" href="#">Personal</a></li>
+              <li><a class="projects-navigation-link" href="#">Studio lab</a></li>
+            </ul>
+          </div>
+        </header>
+
+        <section class="project">
+          <h3 class="project-name">Fondue</h3>
+          <p class="project-information">
+            <b>Project assistant</b>: Francesco Dompieri
+            <b>Material</b>: Glass and Metal
+            <b>Typology</b>: Suspension lamp
+            <b>Client</b>: David Design
+            <b>Year</b>: 2014
+          </p>
+          <a class="project-view-link" href="#">View project</a>
+          <span class="project-like">+200</span>
+        </section>
+
+        <section class="project">
+          <h3 class="project-name">Louis XX</h3>
+          <p class="project-information">
+            <b>Designer</b>: Philippe Starck
+            <b>Typology</b>: Chairs
+            <b>Client</b>: Vitra
+            <b>Year</b>: 2012
+          </p>
+          <a class="project-view-link" href="#">View project</a>
+          <span class="project-like">+200</span>
+        </section>
+
+        <section class="project">
+          <h3 class="project-name">395-396 P22</h3>
+          <p class="project-information">
+            <b>Designer</b>: Partick Norguet
+            <b>Typology</b>: Armchairs
+            <b>Client</b>: Cassina
+            <b>Year</b>: 2013
+          </p>
+          <a class="project-view-link" href="#">View project</a>
+          <span class="project-like">+200</span>
+        </section>
+
+        <section class="project">
+          <h3 class="project-name">Sesann</h3>
+          <p class="project-information">
+            <b>Designer</b>: Gianfranco Frattini
+            <b>Typology</b>: Armchairs
+            <b>Client</b>: Cassina
+            <b>Year</b>: 1970
+          </p>
+          <a class="project-view-link" href="#">View project</a>
+          <span class="project-like">+200</span>
+        </section>
+
+        <section class="project">
+          <h3 class="project-name">Alessi</h3>
+          <p class="project-information">
+            <b>Designer</b>: Piero Lissoni
+            <b>Client</b>: Alessi
+            <b>Year</b>: 2013
+          </p>
+          <a class="project-view-link" href="#">View project</a>
+          <span class="project-like">+200</span>
+        </section>
+      </div>
+
+      <div class="projects-layout-right">
+        <section class="project">
+          <h3 class="project-name">Potter</h3>
+          <p class="project-information">
+            <b>For</b> Stelton
+          </p>
+          <p class="project-description">Potter focuses on the functionality and process of preparing tea. a big sieve allows the flavor of to evenly brewed.</p>
+          <a class="project-view-link" href="#">View project</a>
+          <span class="project-like">+200</span>
+        </section>
+
+        <section class="project">
+          <h3 class="project-name">Tabano</h3>
+          <p class="project-information">
+            <b>Designer</b>: Patricia Urquiola
+            <b>Typology</b>: Armchairs
+            <b>Client</b>: B&B Italia
+            <b>Year</b>: 2014
+          </p>
+          <a class="project-view-link" href="#">View project</a>
+          <span class="project-like">+200</span>
+        </section>
+
+        <section class="project">
+          <h3 class="project-name">Fiji</h3>
+          <p class="project-information">
+            <b>Designer</b>: Cuno Frommherz
+            <b>Typology</b>: Armchairs
+            <b>Year</b>: 2012
+          </p>
+          <a class="project-view-link" href="#">View project</a>
+          <span class="project-like">+200</span>
+        </section>
+
+        <footer class="projects-footer">
+          <h2 class="projects-title">Timeline</h2>
+          <div class="projects-navigation">
+            <ul class="projects-navigation-list">
+              <li><a class="projects-navigation-link current" href="#">2014</a></li>
+              <li><a class="projects-navigation-link" href="#">2013</a></li>
+              <li><a class="projects-navigation-link" href="#">2012</a></li>
+              <li><a class="projects-navigation-link" href="#">2011</a></li>
+              <li><a class="projects-navigation-link" href="#">2010</a></li>
+            </ul>
+          </div>
+        </footer>
+      </div>
+    </section>
+
+    <section class="studio" id="studio">
+      <h2 class="studio-title">Studio</h2>
+
+      <div class="about">
+        <h3 class="about-title visually-hidden">About us</h3>
+        <p class="about-lead"><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin eros sit amet nulla rhoncus dictum.</b></p>
+        <p class="about-lead"><b>Nam rhoncus fringilla dolor vitae vulputate. Nullam quis eros lorem. Integer cursus erat a orci congue feugiat. Cras rhoncus mollis libero, id aliquet purus varius sed.</b></p>
+        <p class="about-text">Aenean ullamcorper porta nisl, ac lobortis elit commodo placerat.</p>
+        <p class="about-text">Vivamus eget laoreet enim. Sed nunc dui, egestas vel diam convallis, faucibus iaculis sapien. Sed ut vulputate nisi.</p>
+        <p class="about-text">Proin tempor risus tellus. Maecenas sit amet fringilla urna, vel iaculis velit. Sed ac felis et sem mollis dictum sed id orci.</p>
+      </div>
+
+      <div class="awards">
+        <img class="studio-image" src="" width="" height="" alt="">
+        <h3 class="awards-title">Awards</h3>
+        <p class="awards-text">
+          Aenean ullamcorper porta nisl,<br>
+          ac lobortis elit<br>
+          commodo placerat.<br>
+          Vivamus
+        </p>
+        <p class="awards-text">
+          Aenean ullamcorper porta nisl,<br>
+          ac lobortis elit<br>
+          commodo placerat.<br>
+          Vivamus
+        </p>
+      </div>
+
+      <div class="staff">
+        <div class="staff-about">
+          <h3 class="staff-title">Staff</h3>
+          <p class="staff-text">Sit amet laoreet sapien dictum. Sed eget eros augue. Pellentesque tempor mi sit amet nisi tincidunt tincidunt. Fusce malesuada lectus sed mauris pharetra faucibus.</p>
+          <p class="staff-text">Aenean diam tortor, hendrerit ac pulvinar vel, condimentum ac velit. Phasellus eu odio elit. Aenean volutpat mi quam, ut ornare augue tempus ut.</p>
+          <p class="staff-text">Morbi sagittis diam mauris, in adipiscing nulla convallis ut.</p>
+        </div>
+
+        <div class="staff-person">
+          <img class="person-image" src="" width="" height="" alt="Philippe Starck image">
+          <p class="person-information">
+            <b>Philippe Starck</b>
+            <span>Designer</span>
+          </p>
+          <div>
+            <a class="person-cv" href="#">CV</a>
+            <ul class="socials">
+              <li><a class="socials-link" href="#"></a>Facebook</li>
+              <li><a class="socials-link" href="#"></a>Twitter</li>
+              <li><a class="socials-link" href="#"></a>Instagram</li>
+              <li><a class="socials-link" href="#"></a>Google+</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="staff-person">
+          <img class="person-image" src="" width="" height="" alt="Mario Bellini image">
+          <p class="person-information">
+            <b>Mario Bellini</b>
+            <span>Designer</span>
+          </p>
+          <div>
+            <a class="person-cv" href="#">CV</a>
+            <ul class="socials">
+              <li><a class="socials-link" href="#"></a>Facebook</li>
+              <li><a class="socials-link" href="#"></a>Twitter</li>
+              <li><a class="socials-link" href="#"></a>Instagram</li>
+              <li><a class="socials-link" href="#"></a>Google+</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="staff-person">
+          <img class="person-image" src="" width="" height="" alt="Patricia Urquiola image">
+          <p class="person-information">
+            <b>Patricia Urquiola</b>
+            <span>Designer</span>
+          </p>
+          <div>
+            <a class="person-cv" href="#">CV</a>
+            <ul class="socials">
+              <li><a class="socials-link" href="#"></a>Facebook</li>
+              <li><a class="socials-link" href="#"></a>Twitter</li>
+              <li><a class="socials-link" href="#"></a>Instagram</li>
+              <li><a class="socials-link" href="#"></a>Google+</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="news" id="news">
+      <h2 class="news-title">News</h2>
+      <div class="news-content">
+        <article class="article">
+          <h1 class="article-header">Mauris et dui sed justo placerat tristique</h1>
+          <date class="article-date">11.07.2014</date>
+          <img class="article-image" src="" width="" height="" alt="article content image">
+          <p class="article-lead">Maecenas imperdiet nisi lorem, sed fermentum tortor pretium eget. Sed mollis lacus quis nunc cursus cursus. Quisque et magna sit amet sapien fermentum scelerisque eu id massa. Mauris ornare massa vel mauris tempus,
+            vitae tempus urna tincidunt.</p>
+          <a class="article-more" href="#">Read more</a>
+        </article>
+        <article class="article">
+          <h1 class="article-header">Proin vehicula nibh massa</h1>
+          <date class="article-date">11.06.2014</date>
+          <img class="article-image" src="" width="" height="" alt="article content image">
+          <p class="article-lead">Praesent non mauris nec orci scelerisque faucibus. Nulla ac varius est. Aenean auctor nisl elit, nec sollicitudin lectus iaculis sed. Maecenas aliquam ligula vitae pharetra scelerisque.</p>
+          <a class="article-more" href="#">Read more</a>
+        </article>
+      </div>
+    </section>
   </main>
 
-  <footer class="main-footer">
-    <section class="newsletter"></section>
-    <div class="footer-social">
-      <b>Follow us</b>
-      <ul class="">
-        <li><a href="" class="social-icon">Facebook</a></li>
-        <li><a href="" class="social-icon">Twitter</a></li>
-        <li><a href="" class="social-icon">Google+</a></li>
-        <li><a href="" class="social-icon">YouTube</a></li>
-      </ul>
+  <footer class="main-footer" id="contacts">
+    <div class="map">
+      <img class="map-image" src="" width="" height="" alt="map image">
     </div>
-    <p class="footer-copyright">Copyright &copy; All Rights Reserved</p>
+
+    <div class="main-footer-right">
+      <div class="main-footer-information">
+        <p class="main-footer-adress">
+          90802 California<br>
+          Long beach<br>
+          PO Box 68789<br>
+          300 East Ocean<br>
+          Boulevard
+        </p>
+        <p class="main-footer-contacts">
+          +64 9 345 6758<br>
+          info@dsgn-studio.com
+        </p>
+      </div>
+      <div class="studio-label">
+        <a class="studio-label-logo">
+          <img src="img/logo.svg" width="" height="" alt="DSGN">
+        </a>
+        <p class="studio-label-description">Associates studio design</p>
+        <div class="socials">
+          <b class="socials-caption visually-hidden">Follow us:</b>
+          <ul class="socials-list">
+            <li><a class="socials-link" href="#">Facebook</a></li>
+            <li><a class="socials-link" href="#">Twitter</a></li>
+            <li><a class="socials-link" href="#">Instagram</a></li>
+            <li><a class="socials-link" href="#">Google+</a></li>
+          </ul>
+        </div>
+      </div>
+      <p class="main-footer-copyright">&copy; 2014 DSGN. All Rights Reserved - Designed by theuncreativelab.com</p>
+    </div>
   </footer>
 </body>
 
