--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         Boulevard
       </p>
       <p class="main-header-contacts">
-        +64 9 345 6758<br>
-        info@dsgn-studio.com
+        <a href="tel:+6493456758">+64 9 345 6758</a><br>
+        <a href="mailto: info@dsgn-studio.com">info@dsgn-studio.com</a>
       </p>
     </div>
   </header>
@@ -75,7 +75,10 @@
             <b>Year</b>: 2014
           </p>
           <a class="project-view-link" href="#">View project</a>
-          <span class="project-like">+200</span>
+          <div class="project-like">
+            <button class="project-like-btn" type="button">Like it!</button>
+            <span class="project-like-count">+200</span>
+          </div>
         </section>
 
         <section class="project">
@@ -87,7 +90,10 @@
             <b>Year</b>: 2012
           </p>
           <a class="project-view-link" href="#">View project</a>
-          <span class="project-like">+200</span>
+          <div class="project-like">
+            <button class="project-like-btn" type="button">Like it!</button>
+            <span class="project-like-count">+200</span>
+          </div>
         </section>
 
         <section class="project">
@@ -99,7 +105,10 @@
             <b>Year</b>: 2013
           </p>
           <a class="project-view-link" href="#">View project</a>
-          <span class="project-like">+200</span>
+          <div class="project-like">
+            <button class="project-like-btn" type="button">Like it!</button>
+            <span class="project-like-count">+200</span>
+          </div>
         </section>
 
         <section class="project">
@@ -111,7 +120,10 @@
             <b>Year</b>: 1970
           </p>
           <a class="project-view-link" href="#">View project</a>
-          <span class="project-like">+200</span>
+          <div class="project-like">
+            <button class="project-like-btn" type="button">Like it!</button>
+            <span class="project-like-count">+200</span>
+          </div>
         </section>
 
         <section class="project">
@@ -122,7 +134,10 @@
             <b>Year</b>: 2013
           </p>
           <a class="project-view-link" href="#">View project</a>
-          <span class="project-like">+200</span>
+          <div class="project-like">
+            <button class="project-like-btn" type="button">Like it!</button>
+            <span class="project-like-count">+200</span>
+          </div>
         </section>
       </div>
 
@@ -134,7 +149,10 @@
           </p>
           <p class="project-description">Potter focuses on the functionality and process of preparing tea. a big sieve allows the flavor of to evenly brewed.</p>
           <a class="project-view-link" href="#">View project</a>
-          <span class="project-like">+200</span>
+          <div class="project-like">
+            <button class="project-like-btn" type="button">Like it!</button>
+            <span class="project-like-count">+200</span>
+          </div>
         </section>
 
         <section class="project">
@@ -146,7 +164,10 @@
             <b>Year</b>: 2014
           </p>
           <a class="project-view-link" href="#">View project</a>
-          <span class="project-like">+200</span>
+          <div class="project-like">
+            <button class="project-like-btn" type="button">Like it!</button>
+            <span class="project-like-count">+200</span>
+          </div>
         </section>
 
         <section class="project">
@@ -157,7 +178,10 @@
             <b>Year</b>: 2012
           </p>
           <a class="project-view-link" href="#">View project</a>
-          <span class="project-like">+200</span>
+          <div class="project-like">
+            <button class="project-like-btn" type="button">Like it!</button>
+            <span class="project-like-count">+200</span>
+          </div>
         </section>
 
         <footer class="projects-footer">
@@ -221,10 +245,10 @@
           <div>
             <a class="person-cv" href="#">CV</a>
             <ul class="socials">
-              <li><a class="socials-link" href="#"></a>Facebook</li>
-              <li><a class="socials-link" href="#"></a>Twitter</li>
-              <li><a class="socials-link" href="#"></a>Instagram</li>
-              <li><a class="socials-link" href="#"></a>Google+</li>
+              <li><a class="socials-link" href="#">Facebook</a></li>
+              <li><a class="socials-link" href="#">Twitter</a></li>
+              <li><a class="socials-link" href="#">Instagram</a></li>
+              <li><a class="socials-link" href="#">Google+</a></li>
             </ul>
           </div>
         </div>
@@ -238,10 +262,10 @@
           <div>
             <a class="person-cv" href="#">CV</a>
             <ul class="socials">
-              <li><a class="socials-link" href="#"></a>Facebook</li>
-              <li><a class="socials-link" href="#"></a>Twitter</li>
-              <li><a class="socials-link" href="#"></a>Instagram</li>
-              <li><a class="socials-link" href="#"></a>Google+</li>
+              <li><a class="socials-link" href="#">Facebook</a></li>
+              <li><a class="socials-link" href="#">Twitter</a></li>
+              <li><a class="socials-link" href="#">Instagram</a></li>
+              <li><a class="socials-link" href="#">Google+</a></li>
             </ul>
           </div>
         </div>
@@ -255,10 +279,10 @@
           <div>
             <a class="person-cv" href="#">CV</a>
             <ul class="socials">
-              <li><a class="socials-link" href="#"></a>Facebook</li>
-              <li><a class="socials-link" href="#"></a>Twitter</li>
-              <li><a class="socials-link" href="#"></a>Instagram</li>
-              <li><a class="socials-link" href="#"></a>Google+</li>
+              <li><a class="socials-link" href="#">Facebook</a></li>
+              <li><a class="socials-link" href="#">Twitter</a></li>
+              <li><a class="socials-link" href="#">Instagram</a></li>
+              <li><a class="socials-link" href="#">Google+</a></li>
             </ul>
           </div>
         </div>
@@ -302,8 +326,8 @@
           Boulevard
         </p>
         <p class="main-footer-contacts">
-          +64 9 345 6758<br>
-          info@dsgn-studio.com
+          <a href="tel:+6493456758">+64 9 345 6758</a><br>
+          <a href="mailto: info@dsgn-studio.com">info@dsgn-studio.com</a>
         </p>
       </div>
       <div class="studio-label">
