--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 
 <body>
   <header class="main-header">
-    <div class="studio-label">
-      <a class="studio-label-logo">
-        <img src="img/logo.svg" width="" height="" alt="DSGN">
-      </a>
-      <p class="studio-label-description">Associates studio design</p>
-      <div class="socials">
-        <b class="socials-caption visually-hidden">Follow us:</b>
-        <ul class="socials-list">
-          <li><a class="socials-link" href="#">Facebook</a></li>
-          <li><a class="socials-link" href="#">Twitter</a></li>
-          <li><a class="socials-link" href="#">Instagram</a></li>
-          <li><a class="socials-link" href="#">Google+</a></li>
-        </ul>
+    <div class="main-header-left">
+      <div class="studio-label">
+        <img class="studio-label-logo" src="img/logo.png" width="162" height="207" alt="DSGN">
+        <p class="studio-label-description">Associates studio design</p>
+        <div class="socials">
+          <b class="socials-caption visually-hidden">Follow us:</b>
+          <ul class="socials-list">
+            <li><a class="socials-link" href="#">Facebook</a></li>
+            <li><a class="socials-link" href="#">Twitter</a></li>
+            <li><a class="socials-link" href="#">Instagram</a></li>
+            <li><a class="socials-link" href="#">Google+</a></li>
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -49,7 +49,7 @@
     </div>
   </header>
 
-  <main class="container">
+  <main>
     <section class="projects" id="projects">
       <div class="projects-layout-left">
         <header class="projects-header">
@@ -68,11 +68,11 @@
         <section class="project">
           <h3 class="project-name">Fondue</h3>
           <p class="project-information">
-            <b>Project assistant</b>: Francesco Dompieri
-            <b>Material</b>: Glass and Metal
-            <b>Typology</b>: Suspension lamp
-            <b>Client</b>: David Design
-            <b>Year</b>: 2014
+            <b class="lead">Project assistant</b>: Francesco Dompieri
+            <b class="lead">Material</b>: Glass and Metal
+            <b class="lead">Typology</b>: Suspension lamp
+            <b class="lead">Client</b>: David Design
+            <b class="lead">Year</b>: 2014
           </p>
           <a class="project-view-link" href="#">View project</a>
           <div class="project-like">
@@ -84,10 +84,10 @@
         <section class="project">
           <h3 class="project-name">Louis XX</h3>
           <p class="project-information">
-            <b>Designer</b>: Philippe Starck
-            <b>Typology</b>: Chairs
-            <b>Client</b>: Vitra
-            <b>Year</b>: 2012
+            <b class="lead">Designer</b>: Philippe Starck
+            <b class="lead">Typology</b>: Chairs
+            <b class="lead">Client</b>: Vitra
+            <b class="lead">Year</b>: 2012
           </p>
           <a class="project-view-link" href="#">View project</a>
           <div class="project-like">
@@ -99,10 +99,10 @@
         <section class="project">
           <h3 class="project-name">395-396 P22</h3>
           <p class="project-information">
-            <b>Designer</b>: Partick Norguet
-            <b>Typology</b>: Armchairs
-            <b>Client</b>: Cassina
-            <b>Year</b>: 2013
+            <b class="lead">Designer</b>: Partick Norguet
+            <b class="lead">Typology</b>: Armchairs
+            <b class="lead">Client</b>: Cassina
+            <b class="lead">Year</b>: 2013
           </p>
           <a class="project-view-link" href="#">View project</a>
           <div class="project-like">
@@ -114,10 +114,10 @@
         <section class="project">
           <h3 class="project-name">Sesann</h3>
           <p class="project-information">
-            <b>Designer</b>: Gianfranco Frattini
-            <b>Typology</b>: Armchairs
-            <b>Client</b>: Cassina
-            <b>Year</b>: 1970
+            <b class="lead">Designer</b>: Gianfranco Frattini
+            <b class="lead">Typology</b>: Armchairs
+            <b class="lead">Client</b>: Cassina
+            <b class="lead">Year</b>: 1970
           </p>
           <a class="project-view-link" href="#">View project</a>
           <div class="project-like">
@@ -129,9 +129,9 @@
         <section class="project">
           <h3 class="project-name">Alessi</h3>
           <p class="project-information">
-            <b>Designer</b>: Piero Lissoni
-            <b>Client</b>: Alessi
-            <b>Year</b>: 2013
+            <b class="lead">Designer</b>: Piero Lissoni
+            <b class="lead">Client</b>: Alessi
+            <b class="lead">Year</b>: 2013
           </p>
           <a class="project-view-link" href="#">View project</a>
           <div class="project-like">
@@ -145,7 +145,7 @@
         <section class="project">
           <h3 class="project-name">Potter</h3>
           <p class="project-information">
-            <b>For</b> Stelton
+            <b class="lead">For</b> Stelton
           </p>
           <p class="project-description">Potter focuses on the functionality and process of preparing tea. a big sieve allows the flavor of to evenly brewed.</p>
           <a class="project-view-link" href="#">View project</a>
@@ -158,10 +158,10 @@
         <section class="project">
           <h3 class="project-name">Tabano</h3>
           <p class="project-information">
-            <b>Designer</b>: Patricia Urquiola
-            <b>Typology</b>: Armchairs
-            <b>Client</b>: B&B Italia
-            <b>Year</b>: 2014
+            <b class="lead">Designer</b>: Patricia Urquiola
+            <b class="lead">Typology</b>: Armchairs
+            <b class="lead">Client</b>: B&B Italia
+            <b class="lead">Year</b>: 2014
           </p>
           <a class="project-view-link" href="#">View project</a>
           <div class="project-like">
@@ -173,9 +173,9 @@
         <section class="project">
           <h3 class="project-name">Fiji</h3>
           <p class="project-information">
-            <b>Designer</b>: Cuno Frommherz
-            <b>Typology</b>: Armchairs
-            <b>Year</b>: 2012
+            <b class="lead">Designer</b>: Cuno Frommherz
+            <b class="lead">Typology</b>: Armchairs
+            <b class="lead">Year</b>: 2012
           </p>
           <a class="project-view-link" href="#">View project</a>
           <div class="project-like">
@@ -201,18 +201,18 @@
 
     <section class="studio" id="studio">
       <h2 class="studio-title">Studio</h2>
-
+      <img class="studio-image" src="" width="" height="" alt="">
+<!--      через position: absolute   img   -->
       <div class="about">
         <h3 class="about-title visually-hidden">About us</h3>
-        <p class="about-lead"><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin eros sit amet nulla rhoncus dictum.</b></p>
-        <p class="about-lead"><b>Nam rhoncus fringilla dolor vitae vulputate. Nullam quis eros lorem. Integer cursus erat a orci congue feugiat. Cras rhoncus mollis libero, id aliquet purus varius sed.</b></p>
+        <p class="about-lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin eros sit amet nulla rhoncus dictum.</p>
+        <p class="about-lead">Nam rhoncus fringilla dolor vitae vulputate. Nullam quis eros lorem. Integer cursus erat a orci congue feugiat. Cras rhoncus mollis libero, id aliquet purus varius sed.</p>
         <p class="about-text">Aenean ullamcorper porta nisl, ac lobortis elit commodo placerat.</p>
         <p class="about-text">Vivamus eget laoreet enim. Sed nunc dui, egestas vel diam convallis, faucibus iaculis sapien. Sed ut vulputate nisi.</p>
         <p class="about-text">Proin tempor risus tellus. Maecenas sit amet fringilla urna, vel iaculis velit. Sed ac felis et sem mollis dictum sed id orci.</p>
       </div>
 
-      <div class="awards">
-        <img class="studio-image" src="" width="" height="" alt="">
+      <div class="awards">        
         <h3 class="awards-title">Awards</h3>
         <p class="awards-text">
           Aenean ullamcorper porta nisl,<br>
@@ -239,8 +239,8 @@
         <div class="staff-person">
           <img class="person-image" src="" width="" height="" alt="Philippe Starck image">
           <p class="person-information">
-            <b>Philippe Starck</b>
-            <span>Designer</span>
+            <b class="person-name">Philippe Starck</b>
+            <span class="person-profession">Designer</span>
           </p>
           <div>
             <a class="person-cv" href="#">CV</a>
@@ -256,8 +256,8 @@
         <div class="staff-person">
           <img class="person-image" src="" width="" height="" alt="Mario Bellini image">
           <p class="person-information">
-            <b>Mario Bellini</b>
-            <span>Designer</span>
+            <b class="person-name">Mario Bellini</b>
+            <span class="person-profession">Designer</span>
           </p>
           <div>
             <a class="person-cv" href="#">CV</a>
@@ -273,8 +273,8 @@
         <div class="staff-person">
           <img class="person-image" src="" width="" height="" alt="Patricia Urquiola image">
           <p class="person-information">
-            <b>Patricia Urquiola</b>
-            <span>Designer</span>
+            <b class="person-name">Patricia Urquiola</b>
+            <span class="person-profession">Designer</span>
           </p>
           <div>
             <a class="person-cv" href="#">CV</a>
