--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
         </header>
 
-        <section class="project">
+        <section class="project  project--fondue">
           <h3 class="project-name">Fondue</h3>
           <p class="project-information">
             <b class="lead">Project assistant</b>: Francesco Dompieri
@@ -81,7 +81,7 @@
           </div>
         </section>
 
-        <section class="project">
+        <section class="project   project--louis">
           <h3 class="project-name">Louis XX</h3>
           <p class="project-information">
             <b class="lead">Designer</b>: Philippe Starck
@@ -96,7 +96,7 @@
           </div>
         </section>
 
-        <section class="project">
+        <section class="project   project--p22">
           <h3 class="project-name">395-396 P22</h3>
           <p class="project-information">
             <b class="lead">Designer</b>: Partick Norguet
@@ -111,7 +111,7 @@
           </div>
         </section>
 
-        <section class="project">
+        <section class="project   project--sesann">
           <h3 class="project-name">Sesann</h3>
           <p class="project-information">
             <b class="lead">Designer</b>: Gianfranco Frattini
@@ -126,7 +126,7 @@
           </div>
         </section>
 
-        <section class="project">
+        <section class="project   project--alessi">
           <h3 class="project-name">Alessi</h3>
           <p class="project-information">
             <b class="lead">Designer</b>: Piero Lissoni
@@ -142,7 +142,7 @@
       </div>
 
       <div class="projects-layout-right">
-        <section class="project">
+        <section class="project   project--potter">
           <h3 class="project-name">Potter</h3>
           <p class="project-information">
             <b class="lead">For</b> Stelton
@@ -155,7 +155,7 @@
           </div>
         </section>
 
-        <section class="project">
+        <section class="project  project--tabano">
           <h3 class="project-name">Tabano</h3>
           <p class="project-information">
             <b class="lead">Designer</b>: Patricia Urquiola
@@ -170,7 +170,7 @@
           </div>
         </section>
 
-        <section class="project">
+        <section class="project  project--fiji">
           <h3 class="project-name">Fiji</h3>
           <p class="project-information">
             <b class="lead">Designer</b>: Cuno Frommherz
@@ -200,35 +200,40 @@
     </section>
 
     <section class="studio" id="studio">
-      <h2 class="studio-title">Studio</h2>
-      <img class="studio-image" src="" width="" height="" alt="">
-<!--      через position: absolute   img   -->
-      <div class="about">
-        <h3 class="about-title visually-hidden">About us</h3>
-        <p class="about-lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin eros sit amet nulla rhoncus dictum.</p>
-        <p class="about-lead">Nam rhoncus fringilla dolor vitae vulputate. Nullam quis eros lorem. Integer cursus erat a orci congue feugiat. Cras rhoncus mollis libero, id aliquet purus varius sed.</p>
-        <p class="about-text">Aenean ullamcorper porta nisl, ac lobortis elit commodo placerat.</p>
-        <p class="about-text">Vivamus eget laoreet enim. Sed nunc dui, egestas vel diam convallis, faucibus iaculis sapien. Sed ut vulputate nisi.</p>
-        <p class="about-text">Proin tempor risus tellus. Maecenas sit amet fringilla urna, vel iaculis velit. Sed ac felis et sem mollis dictum sed id orci.</p>
+      <div class="studio-header">
+        <h2 class="studio-title">Studio</h2>
       </div>
 
-      <div class="awards">        
-        <h3 class="awards-title">Awards</h3>
-        <p class="awards-text">
-          Aenean ullamcorper porta nisl,<br>
-          ac lobortis elit<br>
-          commodo placerat.<br>
-          Vivamus
-        </p>
-        <p class="awards-text">
-          Aenean ullamcorper porta nisl,<br>
-          ac lobortis elit<br>
-          commodo placerat.<br>
-          Vivamus
-        </p>
+      <div class="studio-layout">
+        <!--        <img class="studio-image" src="" width="" height="" alt="">-->
+        <!--      через position: absolute   img   -->
+        <div class="about">
+          <h3 class="about-title visually-hidden">About us</h3>
+          <p class="about-lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin eros sit amet nulla rhoncus dictum.</p>
+          <p class="about-lead">Nam rhoncus fringilla dolor vitae vulputate. Nullam quis eros lorem. Integer cursus erat a orci congue feugiat. Cras rhoncus mollis libero, id aliquet purus varius sed.</p>
+          <p class="about-text">Aenean ullamcorper porta nisl, ac lobortis elit commodo placerat.</p>
+          <p class="about-text">Vivamus eget laoreet enim. Sed nunc dui, egestas vel diam convallis, faucibus iaculis sapien. Sed ut vulputate nisi.</p>
+          <p class="about-text">Proin tempor risus tellus. Maecenas sit amet fringilla urna, vel iaculis velit. Sed ac felis et sem mollis dictum sed id orci.</p>
+        </div>
+
+        <div class="awards">
+          <h3 class="awards-title">Awards</h3>
+          <p class="awards-text">
+            Aenean ullamcorper porta nisl,<br>
+            ac lobortis elit<br>
+            commodo placerat.<br>
+            Vivamus
+          </p>
+          <p class="awards-text">
+            Aenean ullamcorper porta nisl,<br>
+            ac lobortis elit<br>
+            commodo placerat.<br>
+            Vivamus
+          </p>
+        </div>
       </div>
 
-      <div class="staff">
+      <div class="staff-layout">
         <div class="staff-about">
           <h3 class="staff-title">Staff</h3>
           <p class="staff-text">Sit amet laoreet sapien dictum. Sed eget eros augue. Pellentesque tempor mi sit amet nisi tincidunt tincidunt. Fusce malesuada lectus sed mauris pharetra faucibus.</p>
@@ -290,7 +295,9 @@
     </section>
 
     <section class="news" id="news">
-      <h2 class="news-title">News</h2>
+      <div class="news-header">
+        <h2 class="news-title">News</h2>
+      </div>
       <div class="news-content">
         <article class="article">
           <h1 class="article-header">Mauris et dui sed justo placerat tristique</h1>
@@ -312,27 +319,25 @@
   </main>
 
   <footer class="main-footer" id="contacts">
-    <div class="map">
-      <img class="map-image" src="" width="" height="" alt="map image">
-    </div>
+    <img class="map" src="img/map.png" width="750" height="650" alt="map image">
 
     <div class="main-footer-right">
-      <div class="main-footer-information">
-        <p class="main-footer-adress">
+      <div class="information">
+        <p class="adress">
           90802 California<br>
           Long beach<br>
           PO Box 68789<br>
           300 East Ocean<br>
           Boulevard
         </p>
-        <p class="main-footer-contacts">
+        <p class="contacts">
           <a href="tel:+6493456758">+64 9 345 6758</a><br>
           <a href="mailto: info@dsgn-studio.com">info@dsgn-studio.com</a>
         </p>
       </div>
       <div class="studio-label">
         <a class="studio-label-logo">
-          <img src="img/logo.svg" width="" height="" alt="DSGN">
+          <img src="img/logo.png" width="" height="" alt="DSGN">
         </a>
         <p class="studio-label-description">Associates studio design</p>
         <div class="socials">
@@ -348,6 +353,5 @@
       <p class="main-footer-copyright">&copy; 2014 DSGN. All Rights Reserved - Designed by theuncreativelab.com</p>
     </div>
   </footer>
-</body>
 
-</html>
+</body></html>
