--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
   <header class="main-header">
     <div class="main-header-left">
       <div class="studio-label">
-        <img class="studio-label-logo" src="img/logo.png" width="162" height="207" alt="DSGN">
-        <p class="studio-label-description">Associates studio design</p>
+        <img class="logo" src="img/logo.png" width="162" height="207" alt="DSGN">
+        <p class="description">Associates studio design</p>
         <div class="socials">
-          <b class="socials-caption visually-hidden">Follow us:</b>
+          <b class="visually-hidden">Follow us:</b>
           <ul class="socials-list">
-            <li><a class="socials-link" href="#">Facebook</a></li>
-            <li><a class="socials-link" href="#">Twitter</a></li>
-            <li><a class="socials-link" href="#">Instagram</a></li>
-            <li><a class="socials-link" href="#">Google+</a></li>
+            <li class="socials-link socials-link--facebook"><a href="#">Facebook</a></li>
+            <li class="socials-link socials-link--twitter"><a href="#">Twitter</a></li>
+            <li class="socials-link socials-link--linkedin"><a href="#">Linkedin</a></li>
+            <li class="socials-link socials-link--google"><a href="#">Google+</a></li>
           </ul>
         </div>
       </div>
@@ -28,21 +28,24 @@
 
     <div class="main-header-right">
       <nav class="main-navigation">
-        <ul class="main-navigation-list">
-          <li class="main-navigation-item"><a href="#projects">Projects</a></li>
-          <li class="main-navigation-item"><a href="#studio">Our studio</a></li>
-          <li class="main-navigation-item"><a href="#news">News</a></li>
-          <li class="main-navigation-item"><a href="#contacts">Contacts</a></li>
+        <ul class="list">
+          <li class="item"><a href="#projects">Home</a></li>
+          <li class="item"><a href="#projects">Projects</a></li>
+          <li class="item"><a href="#studio">Studio</a></li>
+          <li class="item"><a href="#news">News</a></li>
+          <li class="item"><a href="#contacts">Contacts</a></li>
         </ul>
+        <button class="close-button"></button>
       </nav>
-      <p class="main-header-adress">
+
+      <p class="adress">
         90802 California<br>
         Long beach<br>
         PO Box 68789<br>
         300 East Ocean<br>
         Boulevard
       </p>
-      <p class="main-header-contacts">
+      <p class="contacts">
         <a href="tel:+6493456758">+64 9 345 6758</a><br>
         <a href="mailto: info@dsgn-studio.com">info@dsgn-studio.com</a>
       </p>
