сверстал раздел Studio

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="socials">
           <b class="visually-hidden">Follow us:</b>
           <ul class="socials-list">
-            <li class="socials-link socials-link--facebook"><a href="#">Facebook</a></li>
-            <li class="socials-link socials-link--twitter"><a href="#">Twitter</a></li>
-            <li class="socials-link socials-link--linkedin"><a href="#">Linkedin</a></li>
-            <li class="socials-link socials-link--google"><a href="#">Google+</a></li>
+            <li class="socials-item"><a class="socials-link socials-link--facebook" href="#">Facebook</a></li>
+            <li class="socials-item"><a class="socials-link socials-link--twitter" href="#">Twitter</a></li>
+            <li class="socials-item"><a class="socials-link socials-link--linkedin" href="#">Linkedin</a></li>
+            <li class="socials-item"><a class="socials-link socials-link--google" href="#">Google+</a></li>
           </ul>
         </div>
       </div>
@@ -208,8 +208,7 @@
       </div>
 
       <div class="studio-layout">
-        <!--        <img class="studio-image" src="" width="" height="" alt="">-->
-        <!--      через position: absolute   img   -->
+        <img class="studio-image" src="img/studio.jpg" width="360" height="200" alt="Our studio">
         <div class="about">
           <h3 class="about-title visually-hidden">About us</h3>
           <p class="about-lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin eros sit amet nulla rhoncus dictum.</p>
@@ -240,57 +239,57 @@
         <div class="staff-about">
           <h3 class="staff-title">Staff</h3>
           <p class="staff-text">Sit amet laoreet sapien dictum. Sed eget eros augue. Pellentesque tempor mi sit amet nisi tincidunt tincidunt. Fusce malesuada lectus sed mauris pharetra faucibus.</p>
-          <p class="staff-text">Aenean diam tortor, hendrerit ac pulvinar vel, condimentum ac velit. Phasellus eu odio elit. Aenean volutpat mi quam, ut ornare augue tempus ut.</p>
+          <p class="staff-text">Aenean diam tortor, hendrerit ac pulvinar vel, condimentum ac velit. Phasellus eu odio elit. Aenean volutpat mi quam, ut ornare augue tempus.</p>
           <p class="staff-text">Morbi sagittis diam mauris, in adipiscing nulla convallis ut.</p>
         </div>
 
         <div class="staff-person">
-          <img class="person-image" src="" width="" height="" alt="Philippe Starck image">
+          <img class="person-image" src="img/designer-1.jpg" width="270" height="150" alt="Philippe Starck image">
           <p class="person-information">
             <b class="person-name">Philippe Starck</b>
             <span class="person-profession">Designer</span>
           </p>
-          <div>
+          <div class="person-links">
             <a class="person-cv" href="#">CV</a>
-            <ul class="socials">
-              <li><a class="socials-link" href="#">Facebook</a></li>
-              <li><a class="socials-link" href="#">Twitter</a></li>
-              <li><a class="socials-link" href="#">Instagram</a></li>
-              <li><a class="socials-link" href="#">Google+</a></li>
+            <ul class="socials-list">
+              <li class="socials-item"><a class="socials-link socials-link--facebook" href="#">Facebook</a></li>
+              <li class="socials-item"><a class="socials-link socials-link--twitter" href="#">Twitter</a></li>
+              <li class="socials-item"><a class="socials-link socials-link--linkedin" href="#">Linkedin</a></li>
+              <li class="socials-item"><a class="socials-link socials-link--google" href="#">Google+</a></li>
             </ul>
           </div>
         </div>
 
         <div class="staff-person">
-          <img class="person-image" src="" width="" height="" alt="Mario Bellini image">
+          <img class="person-image" src="img/designer-2.jpg" width="270" height="150" alt="Mario Bellini image">
           <p class="person-information">
             <b class="person-name">Mario Bellini</b>
             <span class="person-profession">Designer</span>
           </p>
-          <div>
+          <div class="person-links">
             <a class="person-cv" href="#">CV</a>
-            <ul class="socials">
-              <li><a class="socials-link" href="#">Facebook</a></li>
-              <li><a class="socials-link" href="#">Twitter</a></li>
-              <li><a class="socials-link" href="#">Instagram</a></li>
-              <li><a class="socials-link" href="#">Google+</a></li>
+            <ul class="socials-list">
+              <li class="socials-item"><a class="socials-link socials-link--facebook" href="#">Facebook</a></li>
+              <li class="socials-item"><a class="socials-link socials-link--twitter" href="#">Twitter</a></li>
+              <li class="socials-item"><a class="socials-link socials-link--linkedin" href="#">Linkedin</a></li>
+              <li class="socials-item"><a class="socials-link socials-link--google" href="#">Google+</a></li>
             </ul>
           </div>
         </div>
 
         <div class="staff-person">
-          <img class="person-image" src="" width="" height="" alt="Patricia Urquiola image">
+          <img class="person-image" src="img/designer-3.jpg" width="270" height="150" alt="Patricia Urquiola image">
           <p class="person-information">
             <b class="person-name">Patricia Urquiola</b>
             <span class="person-profession">Designer</span>
           </p>
-          <div>
+          <div class="person-links">
             <a class="person-cv" href="#">CV</a>
-            <ul class="socials">
-              <li><a class="socials-link" href="#">Facebook</a></li>
-              <li><a class="socials-link" href="#">Twitter</a></li>
-              <li><a class="socials-link" href="#">Instagram</a></li>
-              <li><a class="socials-link" href="#">Google+</a></li>
+            <ul class="socials-list">
+              <li class="socials-item"><a class="socials-link socials-link--facebook" href="#">Facebook</a></li>
+              <li class="socials-item"><a class="socials-link socials-link--twitter" href="#">Twitter</a></li>
+              <li class="socials-item"><a class="socials-link socials-link--linkedin" href="#">Linkedin</a></li>
+              <li class="socials-item"><a class="socials-link socials-link--google" href="#">Google+</a></li>
             </ul>
           </div>
         </div>
@@ -339,21 +338,19 @@
         </p>
       </div>
       <div class="studio-label">
-        <a class="studio-label-logo">
-          <img src="img/logo.png" width="" height="" alt="DSGN">
-        </a>
-        <p class="studio-label-description">Associates studio design</p>
+        <img class="logo" src="img/logo.png" width="162" height="207" alt="DSGN">
+        <p class="description">Associates studio design</p>
         <div class="socials">
-          <b class="socials-caption visually-hidden">Follow us:</b>
+          <b class="visually-hidden">Follow us:</b>
           <ul class="socials-list">
-            <li><a class="socials-link" href="#">Facebook</a></li>
-            <li><a class="socials-link" href="#">Twitter</a></li>
-            <li><a class="socials-link" href="#">Instagram</a></li>
-            <li><a class="socials-link" href="#">Google+</a></li>
+            <li class="socials-item"><a class="socials-link socials-link--facebook" href="#">Facebook</a></li>
+            <li class="socials-item"><a class="socials-link socials-link--twitter" href="#">Twitter</a></li>
+            <li class="socials-item"><a class="socials-link socials-link--linkedin" href="#">Linkedin</a></li>
+            <li class="socials-item"><a class="socials-link socials-link--google" href="#">Google+</a></li>
           </ul>
         </div>
       </div>
-      <p class="main-footer-copyright">&copy; 2014 DSGN. All Rights Reserved - Designed by theuncreativelab.com</p>
+      <p class="copyright">&copy; 2014 DSGN. All Rights Reserved - Designed by theuncreativelab.com</p>
     </div>
   </footer>
 
